feat(audit-accessor): DefaultAuditAccessor now uses the new JobAccessor.